# EPyR

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Benchmarks/: time_circuits.ipynb
scratchwork/: efficiency.ipynb  numba_test.ipynb  scratchpad.ipynb
src/: circuit.py  operator.py  qvector.py  state.py
src/EPyR/: circuit.py  qvector.py  state.py
src/epyr/: circuit.py  epyr_exception.py  main.py  operator_.py  operators.py  qvector.py  state.py
tests/: __init__.py  test_circuit.py  test_state.py
