[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EPyR"
version = "0.0.1"
authors = [ { name="Jurij Waite", email="jurij@berkeley.edu" } ]
description = "A rudimentary quantum computing simulation package."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jurijw/EPyR"
"Bug Tracker" = "https://github.com/jurijw/EPyR/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src", "src/epyr",
]